feat - update swagger
